# llm-cmd-py

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
llm_cmd/: cli.py  executor.py  llm.py
