[tool.poetry]
name = "llm-cmd"
version = "0.1.0"
description = "Python CLI tool that leverages LLMs to generate and execute shell commands through natural language input"
authors = ["whyparkc <parkyymm@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/whyparkc/llm-cmd-python"
packages = [{include = "llm_cmd"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
inquirer = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[tool.poetry.scripts]
llm-cmd = "llm_cmd.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 